// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FacebookPreview matches the snapshot for a faulty image 1`] = `
.c3 {
  color: #606770;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 12px;
  line-height: 20px;
  overflow: hidden;
  padding: 0;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
  margin: 0;
  position: static;
}

.c4 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
}

.c1 {
  box-sizing: border-box;
  max-width: 527px;
  height: 273px;
  background-color: #ddd;
  border-style: dashed;
  border-width: 1px;
  color: #006DAC;
  background-color: #f1f1f1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-size: 14px;
  cursor: pointer;
}

.c5 {
  line-height: 20px;
  min-height: 20px;
  color: #1d2129;
  font-weight: 600;
  overflow: hidden;
  font-size: 16px;
  margin: 0;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: pointer;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.c6 {
  line-height: 16px;
  min-height: 16px;
  color: #606770;
  font-size: 12px;
  padding: 0;
  text-overflow: ellipsis;
  margin: 3px 0 0 0;
  display: -webkit-box;
  cursor: pointer;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background-color: #f2f3f5;
  max-width: 527px;
}

.c2 {
  box-sizing: border-box;
  background-color: #f2f3f5;
  margin: 0;
  padding: 10px 12px;
  position: relative;
  border-bottom: 1px solid #dddfe2;
  border-top: 1px solid #dddfe2;
  border-right: 1px solid #dddfe2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 12px;
  overflow: hidden;
}

@media all and ( max-width:476px ) {
  .c6 {
    display: none;
  }
}

<div
  className="c0"
  id="facebookPreview"
  mode={null}
>
  <div
    className="c1"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Select image
  </div>
  <div
    className="c2"
    mode={null}
  >
    <span
      className="screen-reader-text"
    >
      yoast.com
    </span>
    <p
      aria-hidden="true"
      className="c3"
    >
      <span
        className="c4"
      >
        yoast.com
      </span>
    </p>
    <span
      className="c5"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      YoastCon Workshops
    </span>
    <p
      className="c6"
      mode={null}
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      Description to go along with a faulty image.
    </p>
  </div>
</div>
`;

exports[`FacebookPreview matches the snapshot for a landscape image 1`] = `
.c3 {
  color: #606770;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 12px;
  line-height: 20px;
  overflow: hidden;
  padding: 0;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
  margin: 0;
  position: static;
}

.c4 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
}

.c1 {
  box-sizing: border-box;
  max-width: 527px;
  height: 273px;
  background-color: #ddd;
  border-style: dashed;
  border-width: 1px;
  color: #006DAC;
  background-color: #f1f1f1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-size: 14px;
  cursor: pointer;
}

.c5 {
  line-height: 20px;
  min-height: 20px;
  color: #1d2129;
  font-weight: 600;
  overflow: hidden;
  font-size: 16px;
  margin: 0;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: pointer;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.c6 {
  line-height: 16px;
  min-height: 16px;
  color: #606770;
  font-size: 12px;
  padding: 0;
  text-overflow: ellipsis;
  margin: 3px 0 0 0;
  display: -webkit-box;
  cursor: pointer;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background-color: #f2f3f5;
  max-width: 527px;
}

.c2 {
  box-sizing: border-box;
  background-color: #f2f3f5;
  margin: 0;
  padding: 10px 12px;
  position: relative;
  border-bottom: 1px solid #dddfe2;
  border-top: 1px solid #dddfe2;
  border-right: 1px solid #dddfe2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 12px;
  overflow: hidden;
}

@media all and ( max-width:476px ) {
  .c6 {
    display: none;
  }
}

<div
  className="c0"
  id="facebookPreview"
  mode={null}
>
  <div
    className="c1"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Select image
  </div>
  <div
    className="c2"
    mode={null}
  >
    <span
      className="screen-reader-text"
    >
      yoast.com
    </span>
    <p
      aria-hidden="true"
      className="c3"
    >
      <span
        className="c4"
      >
        yoast.com
      </span>
    </p>
    <span
      className="c5"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      YoastCon Workshops
    </span>
    <p
      className="c6"
      mode={null}
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      Description to go along with a landscape image.
    </p>
  </div>
</div>
`;

exports[`FacebookPreview matches the snapshot for a portrait image 1`] = `
.c3 {
  color: #606770;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 12px;
  line-height: 20px;
  overflow: hidden;
  padding: 0;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
  margin: 0;
  position: static;
}

.c4 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
}

.c1 {
  box-sizing: border-box;
  max-width: 527px;
  height: 273px;
  background-color: #ddd;
  border-style: dashed;
  border-width: 1px;
  color: #006DAC;
  background-color: #f1f1f1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-size: 14px;
  cursor: pointer;
}

.c5 {
  line-height: 20px;
  min-height: 20px;
  color: #1d2129;
  font-weight: 600;
  overflow: hidden;
  font-size: 16px;
  margin: 0;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: pointer;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.c6 {
  line-height: 16px;
  min-height: 16px;
  color: #606770;
  font-size: 12px;
  padding: 0;
  text-overflow: ellipsis;
  margin: 3px 0 0 0;
  display: -webkit-box;
  cursor: pointer;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background-color: #f2f3f5;
  max-width: 527px;
}

.c2 {
  box-sizing: border-box;
  background-color: #f2f3f5;
  margin: 0;
  padding: 10px 12px;
  position: relative;
  border-bottom: 1px solid #dddfe2;
  border-top: 1px solid #dddfe2;
  border-right: 1px solid #dddfe2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 12px;
  overflow: hidden;
}

@media all and ( max-width:476px ) {
  .c6 {
    display: none;
  }
}

<div
  className="c0"
  id="facebookPreview"
  mode={null}
>
  <div
    className="c1"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Select image
  </div>
  <div
    className="c2"
    mode={null}
  >
    <span
      className="screen-reader-text"
    >
      yoast.com
    </span>
    <p
      aria-hidden="true"
      className="c3"
    >
      <span
        className="c4"
      >
        yoast.com
      </span>
    </p>
    <span
      className="c5"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      YoastCon Workshops
    </span>
    <p
      className="c6"
      mode={null}
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      Description to go along with a portrait image.
    </p>
  </div>
</div>
`;

exports[`FacebookPreview matches the snapshot for a square image 1`] = `
.c3 {
  color: #606770;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 12px;
  line-height: 20px;
  overflow: hidden;
  padding: 0;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
  margin: 0;
  position: static;
}

.c4 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
}

.c1 {
  box-sizing: border-box;
  max-width: 527px;
  height: 273px;
  background-color: #ddd;
  border-style: dashed;
  border-width: 1px;
  color: #006DAC;
  background-color: #f1f1f1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-size: 14px;
  cursor: pointer;
}

.c5 {
  line-height: 20px;
  min-height: 20px;
  color: #1d2129;
  font-weight: 600;
  overflow: hidden;
  font-size: 16px;
  margin: 0;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: pointer;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.c6 {
  line-height: 16px;
  min-height: 16px;
  color: #606770;
  font-size: 12px;
  padding: 0;
  text-overflow: ellipsis;
  margin: 3px 0 0 0;
  display: -webkit-box;
  cursor: pointer;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background-color: #f2f3f5;
  max-width: 527px;
}

.c2 {
  box-sizing: border-box;
  background-color: #f2f3f5;
  margin: 0;
  padding: 10px 12px;
  position: relative;
  border-bottom: 1px solid #dddfe2;
  border-top: 1px solid #dddfe2;
  border-right: 1px solid #dddfe2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 12px;
  overflow: hidden;
}

@media all and ( max-width:476px ) {
  .c6 {
    display: none;
  }
}

<div
  className="c0"
  id="facebookPreview"
  mode={null}
>
  <div
    className="c1"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Select image
  </div>
  <div
    className="c2"
    mode={null}
  >
    <span
      className="screen-reader-text"
    >
      yoast.com
    </span>
    <p
      aria-hidden="true"
      className="c3"
    >
      <span
        className="c4"
      >
        yoast.com
      </span>
    </p>
    <span
      className="c5"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      YoastCon Workshops
    </span>
    <p
      className="c6"
      mode={null}
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      Description to go along with a square image.
    </p>
  </div>
</div>
`;

exports[`FacebookPreview matches the snapshot for a too small image 1`] = `
.c3 {
  color: #606770;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 12px;
  line-height: 20px;
  overflow: hidden;
  padding: 0;
  text-overflow: ellipsis;
  text-transform: uppercase;
  white-space: nowrap;
  margin: 0;
  position: static;
}

.c4 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
}

.c1 {
  box-sizing: border-box;
  max-width: 527px;
  height: 273px;
  background-color: #ddd;
  border-style: dashed;
  border-width: 1px;
  color: #006DAC;
  background-color: #f1f1f1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  font-size: 14px;
  cursor: pointer;
}

.c5 {
  line-height: 20px;
  min-height: 20px;
  color: #1d2129;
  font-weight: 600;
  overflow: hidden;
  font-size: 16px;
  margin: 0;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: pointer;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.c6 {
  line-height: 16px;
  min-height: 16px;
  color: #606770;
  font-size: 12px;
  padding: 0;
  text-overflow: ellipsis;
  margin: 3px 0 0 0;
  display: -webkit-box;
  cursor: pointer;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background-color: #f2f3f5;
  max-width: 527px;
}

.c2 {
  box-sizing: border-box;
  background-color: #f2f3f5;
  margin: 0;
  padding: 10px 12px;
  position: relative;
  border-bottom: 1px solid #dddfe2;
  border-top: 1px solid #dddfe2;
  border-right: 1px solid #dddfe2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 12px;
  overflow: hidden;
}

@media all and ( max-width:476px ) {
  .c6 {
    display: none;
  }
}

<div
  className="c0"
  id="facebookPreview"
  mode={null}
>
  <div
    className="c1"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Select image
  </div>
  <div
    className="c2"
    mode={null}
  >
    <span
      className="screen-reader-text"
    >
      yoast.com
    </span>
    <p
      aria-hidden="true"
      className="c3"
    >
      <span
        className="c4"
      >
        yoast.com
      </span>
    </p>
    <span
      className="c5"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      YoastCon Workshops
    </span>
    <p
      className="c6"
      mode={null}
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      Description to go along with too small an image.
    </p>
  </div>
</div>
`;
